
      BOOKKEEPER-556: BookieServerMXBean#getServerState makes no sense (ivank via sijie)

      BOOKKEEPER-574: Extend the bookkeeper shell to get a list of available bookies (ivank via umamahesh)

      BOOKKEEPER-576: Bookie client should use netty Decoder/Encoder (ivank via sijie)

      BOOKKEEPER-585: Auditor logs noisily when a ledger has been deleted (ivank via sijie)

Release 4.2.0 - 2013-01-14

  Non-backward compatible changes:

    BUGFIXES:

    IMPROVEMENTS:

      bookkeeper-server:

        BOOKKEEPER-203: improve ledger manager interface to remove zookeeper dependency on metadata operations. (sijie via ivank)

        BOOKKEEPER-303: LedgerMetadata should serialized using protobufs (ivank)

      hedwig-client:

        BOOKKEEPER-339: Let hedwig cpp client support returning message seq id for publish requests. (sijie via ivank)

  Backward compatible changes:

    BUGFIXES:

      BOOKKEEPER-289: mvn clean doesn't remove test output files (sijie via ivank)

      BOOKKEEPER-298: We run with preferIPv4Stack in the scripts but not in the tests (ivank)

      BOOKKEEPER-292: Test backward compatibility automatically between versions. (ivank)

      BOOKKEEPER-352: Should not use static ServerStats/BKStats instance in TestServerStats/TestBKStats (sijie via fpj)

      BOOKKEEPER-338: Create Version.NEW and Version.ANY static instances of Version so that were not passing around nulls (sijie via ivank)

      BOOKKEEPER-32: Clean up LOG.debug statements (Stu Hood via sijie)

      BOOKKEEPER-484: Misc fixes for test scripts (ivank via fpj)

      BOOKKEEPER-483: precommit tests only check toplevel rat file, not the one for submodules. (ivank via fpj)

      BOOKKEEPER-533: TestSubAfterCloseSub fails strangely in tests (ivank via fpj)

      BOOKKEEPER-480: Fix javac warnings (ivank via sijie)

      BOOKKEEPER-481: Fix javadoc warnings (ivank via sijie)

      bookkeeper-server:
